added user preferred language auto detecting. default languages renamed ru and en. users chosen language remember ability

--- a/www/config.ini
+++ b/www/config.ini
@@ -10,5 +10,5 @@ site_email2="info@thissite.com"
 site_phone="+7 (900) 123-45-67"
 site_phone_f="+79001234567"
 multilingual=1
-site_languages="ru_ru,en_en"
-default_language="ru_ru"
+site_languages="ru,en"
+default_language="ru"
